@@ -577,19 +577,7 @@ def do_edit(pagename, request):
     # one place before we manipulate the text.
     savetext = pg.normalizeText(savetext, stripspaces=rstrip)
 
-
-    # Clean comment - replace CR, LF, TAB by whitespace, delete control chars
-    # TODO: move this to config, create on first call then return cached.
-    remap_chars = {
-        ord(u'\t'): u' ',
-        ord(u'\r'): u' ',
-        ord(u'\n'): u' ',
-    }
-    control_chars = u'\x00\x01\x02\x03\x04\x05\x06\x07\x08\x0b\x0c\x0e\x0f' \
-                    '\x10\x11\x12\x13\x14\x15\x16\x17\x18\x19\x1a\x1b\x1c\x1d\x1e\x1f'
-    for c in control_chars:
-        remap_chars[c] = None
-    comment = comment.translate(remap_chars)
+    comment = wikiutil.clean_comment(comment)
 
     # Edit was canceled
     if request.form.has_key('button_cancel'):
